package net.civeira.phylax.features.notification.message.domain;

import java.time.OffsetDateTime;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.notification.message.domain.event.MessageCreateEvent;
import net.civeira.phylax.features.notification.message.domain.event.MessageDeleteEvent;
import net.civeira.phylax.features.notification.message.domain.event.MessageEvent;
import net.civeira.phylax.features.notification.message.domain.event.MessageUpdateEvent;
import net.civeira.phylax.features.notification.message.domain.valueobject.ContentVO;
import net.civeira.phylax.features.notification.message.domain.valueobject.CreatedAtVO;
import net.civeira.phylax.features.notification.message.domain.valueobject.LockAtVO;
import net.civeira.phylax.features.notification.message.domain.valueobject.RetriesVO;
import net.civeira.phylax.features.notification.message.domain.valueobject.SendAtVO;
import net.civeira.phylax.features.notification.message.domain.valueobject.TargetVO;
import net.civeira.phylax.features.notification.message.domain.valueobject.TenantVO;
import net.civeira.phylax.features.notification.message.domain.valueobject.UidVO;
import net.civeira.phylax.features.notification.message.domain.valueobject.UrgentVO;
import net.civeira.phylax.features.notification.message.domain.valueobject.VersionVO;

/**
 * message
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class Message implements MessageRef {

  /**
   * Prepare a new message with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new message
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed message.
   */
  public static Message create(final MessageChangeSet change) throws ConstraintException {
    change.createdAt(OffsetDateTime.now());
    change.sendAtNull();
    change.lockAtNull();
    Message instance = new Message(change, Optional.empty());
    instance.addEvent(MessageCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * El content de message
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private ContentVO contentValue;

  /**
   * El created at de message
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private CreatedAtVO createdAtValue;

  /**
   * El lock at de message
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private LockAtVO lockAtValue = LockAtVO.nullValue();

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<MessageEvent> recordedEvents = List.of();

  /**
   * El retries de message
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private RetriesVO retriesValue;

  /**
   * El send at de message
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private SendAtVO sendAtValue = SendAtVO.nullValue();

  /**
   * name
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private TargetVO targetValue;

  /**
   * null = global, valor = override
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private TenantVO tenantValue = TenantVO.nullValue();

  /**
   * El uid de message
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * El urgent de message
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UrgentVO urgentValue;

  /**
   * Campo con el número de version de message para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private Message(final MessageChangeSet attribute, final Optional<Message> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.targetValue = attribute.readTarget(previous, list);
    this.tenantValue = attribute.readTenant(previous, list);
    this.urgentValue = attribute.readUrgent(previous, list);
    this.contentValue = attribute.readContent(previous, list);
    this.retriesValue = attribute.readRetries(previous, list);
    this.createdAtValue = attribute.readCreatedAt(previous, list);
    this.sendAtValue = attribute.readSendAt(previous, list);
    this.lockAtValue = attribute.readLockAt(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on Message", list);
    }
    this.recordedEvents = previous.map(Message::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a message
   *
   * @autogenerated EntityGenerator
   * @return A instance of message ready to be deleted
   */
  public Message delete() {
    Message instance = new Message(new MessageChangeSet(), Optional.of(this));
    instance.addEvent(MessageDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(10);
    uidToMap(map);
    targetToMap(map);
    tenantToMap(map);
    urgentToMap(map);
    contentToMap(map);
    retriesToMap(map);
    createdAtToMap(map);
    sendAtToMap(map);
    lockAtToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a message
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of message
   */
  public Message update(final MessageChangeSet change) throws ConstraintException {
    change.unsetCreatedAt();
    change.unsetSendAt();
    change.unsetLockAt();
    Message instance = new Message(change, Optional.of(this));
    instance.addEvent(MessageUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Message withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final MessageEvent event) {
    List<MessageEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
