package net.civeira.phylax.features.notification.smtpoutboundconfig.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.event.SmtpOutboundConfigCreateEvent;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.event.SmtpOutboundConfigDeleteEvent;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.event.SmtpOutboundConfigEvent;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.event.SmtpOutboundConfigUpdateEvent;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.HostVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.LoginVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.MaxRetriesVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.PasswordVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.PortVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.RateLimitVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.RetryDelayVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.SenderEmailVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.SenderNameVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.TenantVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.TimeoutVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.UidVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.UseTlsVO;
import net.civeira.phylax.features.notification.smtpoutboundconfig.domain.valueobject.VersionVO;

/**
 * smtp-outbound-config
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class SmtpOutboundConfig implements SmtpOutboundConfigRef {

  /**
   * Prepare a new smtp outbound config with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new smtp outbound config
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed smtp outbound config.
   */
  public static SmtpOutboundConfig create(final SmtpOutboundConfigChangeSet change)
      throws ConstraintException {
    SmtpOutboundConfig instance = new SmtpOutboundConfig(change, Optional.empty());
    instance.addEvent(SmtpOutboundConfigCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * El host de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private HostVO hostValue;

  /**
   * El login de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private LoginVO loginValue;

  /**
   * El max retries de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private MaxRetriesVO maxRetriesValue;

  /**
   * El password de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private PasswordVO passwordValue;

  /**
   * El port de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private PortVO portValue;

  /**
   * El rate limit de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private RateLimitVO rateLimitValue;

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<SmtpOutboundConfigEvent> recordedEvents = List.of();

  /**
   * El retry delay de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private RetryDelayVO retryDelayValue;

  /**
   * El sender email de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private SenderEmailVO senderEmailValue;

  /**
   * El sender name de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private SenderNameVO senderNameValue = SenderNameVO.nullValue();

  /**
   * null = global, valor = override
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private TenantVO tenantValue = TenantVO.nullValue();

  /**
   * El timeout de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private TimeoutVO timeoutValue;

  /**
   * El uid de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * El use tls de smtp outbound config
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UseTlsVO useTlsValue;

  /**
   * Campo con el número de version de smtp outbound config para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private SmtpOutboundConfig(final SmtpOutboundConfigChangeSet attribute,
      final Optional<SmtpOutboundConfig> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.tenantValue = attribute.readTenant(previous, list);
    this.hostValue = attribute.readHost(previous, list);
    this.portValue = attribute.readPort(previous, list);
    this.loginValue = attribute.readLogin(previous, list);
    this.passwordValue = attribute.readPassword(previous, list);
    this.senderNameValue = attribute.readSenderName(previous, list);
    this.senderEmailValue = attribute.readSenderEmail(previous, list);
    this.timeoutValue = attribute.readTimeout(previous, list);
    this.useTlsValue = attribute.readUseTls(previous, list);
    this.maxRetriesValue = attribute.readMaxRetries(previous, list);
    this.retryDelayValue = attribute.readRetryDelay(previous, list);
    this.rateLimitValue = attribute.readRateLimit(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on SmtpOutboundConfig", list);
    }
    this.recordedEvents = previous.map(SmtpOutboundConfig::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a smtp outbound config
   *
   * @autogenerated EntityGenerator
   * @return A instance of smtp outbound config ready to be deleted
   */
  public SmtpOutboundConfig delete() {
    SmtpOutboundConfig instance =
        new SmtpOutboundConfig(new SmtpOutboundConfigChangeSet(), Optional.of(this));
    instance.addEvent(SmtpOutboundConfigDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(14);
    uidToMap(map);
    tenantToMap(map);
    hostToMap(map);
    portToMap(map);
    loginToMap(map);
    passwordToMap(map);
    senderNameToMap(map);
    senderEmailToMap(map);
    timeoutToMap(map);
    useTlsToMap(map);
    maxRetriesToMap(map);
    retryDelayToMap(map);
    rateLimitToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a smtp outbound config
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of smtp outbound config
   */
  public SmtpOutboundConfig update(final SmtpOutboundConfigChangeSet change)
      throws ConstraintException {
    SmtpOutboundConfig instance = new SmtpOutboundConfig(change, Optional.of(this));
    instance.addEvent(SmtpOutboundConfigUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public SmtpOutboundConfig withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final SmtpOutboundConfigEvent event) {
    List<SmtpOutboundConfigEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
