' @autogenerated
@startuml Paquete de notification
title Paquete de notification
left to right direction
class notification.Message{
uid:string
target:string
urgent:boolean
content:blob
retries:integer
createdAt:datetime
sendAt:datetime
lockAt:datetime
version:integer
list()
retrieve()
create()
update()
delete()
}
access.Tenant "1"  o--  "N*" notification.Message: tenant 

class notification.SmtpOutboundConfig{
uid:string
host:string
port:integer
login:string
password:string
senderName:string
senderEmail:string
timeout:integer
useTls:boolean
maxRetries:integer
retryDelay:integer
rateLimit:integer
version:integer
list()
retrieve()
create()
update()
delete()
}
access.Tenant "1"  o--  "N*" notification.SmtpOutboundConfig: tenant 

access.Tenant "1"  o--  "N*" notification.Message: tenant  
access.Tenant "1"  o--  "N*" notification.SmtpOutboundConfig: tenant  

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
